"Meal Finder" fixed an issue on mobile devices, where the img would not properly scale

--- a/Meal Finder/style.css
+++ b/Meal Finder/style.css
@@ -100,7 +100,7 @@ input[type="text"] {
 }
 
 .single-meal img {
-  width: 300px;
+  width: 70%;
   margin: 15px;
   border: 4px solid #fff;
   border-radius: 2px;
